# SimpleParsing

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  README_original.md  README_pipy.md  README_pypi.md  __init__.py  codecov.yml  easyargs.py  example.py  install.sh  mkdocs.yml  pyproject.toml  pytest.ini  python-package.yml  repro.py  repro_subgroup_minimal.yaml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  simple_parsing.py  test.py  test_base.py  test_utils.py  versioneer.py
.benchmarks/Linux-CPython-3.11-64bit/: 0001_52a0aae90904a4c97ea202e3bdd40c58c5ab6b71_20230803_171501_uncommited-changes.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: benchmark.yml  benchmark_comment.yml  build.yml  python-publish.yml  upload.yml
dev/bench/: data.js
docs/: Home.md  README.md  Roadmap.md  api_reference.md  index.md  make_examples_doc.py  simple_example.md
docs/examples/: README.md  basic_example.py  demo.py  docstrings_example.py  inheritance_example.py  multiple_example.py  nesting_example.py  (+1 more)
examples/: README.md  basic_example.py  basic_example_after.py  basic_example_before.py  collections_example.py  dataclass_example.py  dataclasses_with_methods.py  demo.py  demo_simple.py  docstrings_example.py  enums_example.py  list_example.py  lists_example.py  ml_example.py  multiple_example.py  multiple_instances_example.py  multiple_lists_example.py  nesting_example.py  prefix_example.py  test_examples.py
refactored_parsing/: conftest.py  help_formatter.py  parsing.py  test_base.py  testutils.py  types.py
simple_parsing/: __init__.py  _version.py  conflicts.py  custom_return_type.py  decorators.py  docstring.py  help_formatter.py  helpers.py  logging_utils.py  parsing.py  refactored_parsing.py  replace.py  replace_selections.py  replace_subgroups.py  subgroup_parsing.py  types.py  utils.py  wrappers.py
test/: __init__.py  a.py  b.py  conftest.py  test_aliases.py  test_base.py  test_bools.py  test_choice.py  test_conf_path.py  test_conflicts.py  test_custom_args.py  test_decoding.py  test_decorator.py  test_default_args.py  test_description_from_docstring.py  test_docstrings.py  test_examples.py  test_fields.py  test_final.py  test_flag.py  test_flags.py  test_forward_ref.py  test_future_annotations.py  test_generation_mode.py  test_get_argparse_type_for_container.py  test_get_bound.py  test_huggingface_compat.py  test_inheritance.py  test_initvar.py  test_issue64.py  test_issue_107.py  test_issue_132.py  test_issue_144.py  test_issue_181.py  test_issue_266.py  test_issue_295.py  test_issue_46.py  test_issue_48.py  test_issue_96.py  test_item_type.py  (+33 more)
(+229 files in other folders)
