[tool.poetry]
name = "simple-parsing"
version = "0.0.0"
description = "A small utility for simplifying and cleaning up argument parsing scripts."
authors = ["Fabrice Normandin <fabrice.normandin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
docstring-parser = "~=0.15"
typing-extensions = ">=4.5.0"
pyyaml = {version = "^6.0.1", optional = true}
tomli = {version = "^2.0.1", optional = true}
tomli-w = {version = "^1.0.0", optional = true}
pydantic = {version = "^2.6.1", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-xdist = "^3.5.0"
pytest-regressions = "^2.4.2"
pytest-cov = "^4.1.0"
numpy = "^1.24.2"
pytest-benchmark = "^4.0.0"


[tool.poetry.extras]
yaml = ["pyyaml"]
toml = ["tomli", "tomli_w"]
pydantic = ["pydantic"]


[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
